# -sudoku2

./: .gitignore  CMakeLists.txt  test.sh
allen/: t11
data/: -1  -10  -11  -12  -13  -2  -4  -5  -6  -8_hard_5X5_board  2  2X3_empty_board  3  4  5
log/: gur  gur.lp
output/expected_out/: -1.exp_out  -10.exp_out  -11.exp_out  -12.exp_out  -13.exp_out  -2.exp_out  -3.exp_out  -4.exp_out  -5.exp_out  -6.exp_out  -7.exp_out  -8_hard_5X5_board.exp_out  -9.exp_out  1.exp_out  2.exp_out  edit_print_exit.exp_out  empty_2X2_num_solution.exp_out
output/valgrind_out/: -1.val_out  -10.val_out  -11.val_out  -12.val_out  -13.val_out  -2.val_out  -3.val_out  -4.val_out  -5.val_out  -6.val_out  -7.val_out  -8_hard_5X5_board.val_out  -9.val_out  edit_print_exit.val_out  empty_2X2_num_solution.val_out
question/: gurubi-main.c  makefile  proj  project-planning.xlsx  project.xlsx  sudoku-console
scripts/: create_expected.sh  create_golden.sh  main.sh  test.sh  valgrind-test.sh
src/: file_handler.c  file_handler.h  game.c  game.h  game_aux.c  game_aux.h  gurobi_c.h  gurobi_c2.c  linked_list.c  linked_list.h  lp_solver.c  lp_solver.h  main.c  main_aux.c  main_aux.h  makefile  parser.c  parser.h  solver.c  solver.h  sudoku-console
tests/: -1  -10  -11  -12  -13  -2  -3  -4  -5  -6  -7  -8_hard_5X5_board  -9  1  2  empty_2X2_num_solution
